Moving message bus configurations to its own module
Issue-ID: POLICY-5131
Change-Id: Ibbcdc487300767e7b10d69e9b388c50f09e1adbc
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>